[package]
name = "bipa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = "0.4.38"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
